apps/mongo-express/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: mongo-express
  template:
    metadata:
      labels:
        pod: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express:1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.01"
            limits:
              memory: "512Mi"
              cpu: "1"
