apps/mongo-express/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
spec:
  selector:
    pod: mongo-express
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: http
